master_5_0_jdk_11   pom.xml-версия java изменена на 11, добавлена зависимость javax.annotation   .travis.yml - openjdk8 изменено на openjdk11   InMemoryMealRepository - в методах тип возвращаемого значения у meals заменен на var (Java 10)   MealTestData, UserTestData - Arrays.asList заменен на List.of (неизменяемый список) (Java 9)